update the oligo_url and the blood_test
